Add bitmap support

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -90,6 +90,8 @@ encoding//Debug/optimizerAssistant/opt_level__off/subdir_vars.mk=UTF-8
 encoding//Debug/sources.mk=UTF-8
 encoding//Debug/subdir_rules.mk=UTF-8
 encoding//Debug/subdir_vars.mk=UTF-8
+encoding//Debug/ui_bitmaps/subdir_rules.mk=UTF-8
+encoding//Debug/ui_bitmaps/subdir_vars.mk=UTF-8
 encoding//Release/ccs/subdir_rules.mk=UTF-8
 encoding//Release/ccs/subdir_vars.mk=UTF-8
 encoding//Release/makefile=UTF-8
