Add glyph bitmaps generator

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -92,6 +92,8 @@ encoding//Debug/subdir_rules.mk=UTF-8
 encoding//Debug/subdir_vars.mk=UTF-8
 encoding//Debug/ui_bitmaps/subdir_rules.mk=UTF-8
 encoding//Debug/ui_bitmaps/subdir_vars.mk=UTF-8
+encoding//Debug/ui_glyphs/subdir_rules.mk=UTF-8
+encoding//Debug/ui_glyphs/subdir_vars.mk=UTF-8
 encoding//Release/ccs/subdir_rules.mk=UTF-8
 encoding//Release/ccs/subdir_vars.mk=UTF-8
 encoding//Release/makefile=UTF-8
