--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,14 @@
-# Created by https://www.toptal.com/developers/gitignore/api/codecomposerstudio
-# Edit at https://www.toptal.com/developers/gitignore?templates=codecomposerstudio
-
 ### CodeComposerStudio ###
-
 tmp/
 *.tmp
 *.bak
+
 # Generated build artifact directories
 Debug/
 Release/
 Flash/
 RAM/
+
 # Generated build artifacts
 makefile
 *.map
@@ -18,16 +16,42 @@ makefile
 *.opt
 *.pp
 *.xml
+
 # Generated directories
 .config/
 .launches/
+
 # Generated file used to help display error messages in the problems view
 .xdchelp
+
 # Uniflash session files
 *.uniflashsession
 
-.ccsproject
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
 
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
+### Python ###
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+### User Defined ###
+.ccsproject
 *.bdf
-test_*.piskel
-test_*_bitmap.c
