--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -139,3 +139,4 @@ encoding//Release/optimizerAssistant/opt_for_speed__5/subdir_vars.mk=UTF-8
 encoding//Release/sources.mk=UTF-8
 encoding//Release/subdir_rules.mk=UTF-8
 encoding//Release/subdir_vars.mk=UTF-8
+encoding/<project>=UTF-8
